android_app/kaf2020android/app/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_libbmp_armeabi-v7a.stdout.txt
ninja: Entering directory `C:\Users\GUY\Desktop\code\hacking\ctfs\CTFs\kaf2020\oops_my_exploit\android_app\kaf2020android\app\.cxx\cmake\debug\armeabi-v7a'
[1/2] Building C object CMakeFiles/libbmp.dir/src/bmp_parse.c.o
C:/Users/GUY/Desktop/code/hacking/ctfs/CTFs/kaf2020/oops_my_exploit/android_app/libbmp/src/bmp_parse.c:28:53: warning: format specifies type 'unsigned int' but the argument has type 'struct (anonymous struct at C:/Users/GUY/Desktop/code/hacking/ctfs/CTFs/kaf2020/oops_my_exploit/android_app/libbmp/src/../include/bmp_parse.h:8:5)' [-Wformat]
        printf("[-] Invalid signature found: %x\n", header->signature);
                                             ~~     ^~~~~~~~~~~~~~~~~
1 warning generated.
[2/2] Linking C executable C:\Users\GUY\Desktop\code\hacking\ctfs\CTFs\kaf2020\oops_my_exploit\android_app\kaf2020android\app\.cxx\cmake\debug\bin\libbmp
FAILED: C:/Users/GUY/Desktop/code/hacking/ctfs/CTFs/kaf2020/oops_my_exploit/android_app/kaf2020android/app/.cxx/cmake/debug/bin/libbmp 
cmd.exe /C "cd . && F:\android-studio_sdk\ndk\21.3.6528147\toolchains\llvm\prebuilt\windows-x86_64\bin\clang.exe --target=armv7-none-linux-androideabi24 --gcc-toolchain=F:/android-studio_sdk/ndk/21.3.6528147/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=F:/android-studio_sdk/ndk/21.3.6528147/toolchains/llvm/prebuilt/windows-x86_64/sysroot -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security  -O0 -fno-limit-debug-info  -Wl,--exclude-libs,libgcc.a -Wl,--exclude-libs,libgcc_real.a -Wl,--exclude-libs,libatomic.a -static-libstdc++ -Wl,--build-id -Wl,--fatal-warnings -Wl,--exclude-libs,libunwind.a -Wl,--no-undefined -Qunused-arguments -Wl,--gc-sections CMakeFiles/libbmp.dir/src/bmp_parse.c.o CMakeFiles/libbmp.dir/src/compression.c.o  -o C:\Users\GUY\Desktop\code\hacking\ctfs\CTFs\kaf2020\oops_my_exploit\android_app\kaf2020android\app\.cxx\cmake\debug\bin\libbmp  -latomic -lm && cd ."
C:/Users/GUY/Desktop/code/hacking/ctfs/CTFs/kaf2020/oops_my_exploit/android_app/libbmp/src/bmp_parse.c:21: error: undefined reference to 'read_bmp'
clang: error: linker command failed with exit code 1 (use -v to see invocation)
ninja: build stopped: subcommand failed.
